--- a/main.html
+++ b/main.html
@@ -84,6 +84,7 @@
 	/* 2. Show the mobile version by default */
 	.module-mobile {
 	  display: block;
+		height: 100%;
 	}
 	
 	/* 3. Use a Media Query to swap them at a specific breakpoint (e.g., 768px) */
