--- a/main.html
+++ b/main.html
@@ -782,7 +782,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<h2 class="elementor-heading-title elementor-size-default">מודול 1:  הבאת גור חדש הביתה - כיצד מתנהלים
 </h2>		</div>
 				</div>
-				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp" style="width: 100%" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
+				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp module-mobile" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-2111a24 elementor-widget elementor-widget-image" data-id="2111a24" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -794,6 +794,15 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-96eeaa0 elementor-widget elementor-widget-text-editor" data-id="96eeaa0" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 							<p><span style="font-weight: 400;">איך לנהל </span><b>שגרה כמפתח להצלחה</b><span style="font-weight: 400;"> עם הגור. פה יש לך דגשים קטנים וחשובים שיכולים לעשות לכם שינוי עצום בהתנהלות בבית.</span></p><p><span style="font-weight: 400;">בנוסף יש את </span><b>עקרון התכנון המוקדם</b><span style="font-weight: 400;"> – עקרון קסם שיעזור לכם לנבא מתי לגור יש צרכים ולדעת להתנהל איתו בצורה מושלמת.</span></p><p><span style="font-weight: 400;">ועוד…</span></p>						</div>
+				</div>
+					</div>
+		</div>
+		<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp module-desktop" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
+			<div class="elementor-widget-wrap elementor-element-populated">
+								<div class="elementor-element elementor-element-2111a24 elementor-widget elementor-widget-image" data-id="2111a24" data-element_type="widget" data-widget_type="image.default">
+				<div class="elementor-widget-container">
+															<img loading="lazy" decoding="async" width="926" height="882" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/57d7a60b36630cbc12af8e990c69d0e9.png" class="attachment-large size-large wp-image-669 lazyloaded" alt="" data-ll-status="loaded">
+																													</div>
 				</div>
 					</div>
 		</div>
