--- a/main.html
+++ b/main.html
@@ -76,29 +76,6 @@
 		}
 	</style>
 	<style>
-		/* 1. Hide the desktop version by default (Mobile First) */
-	.module-desktop {
-	  display: none;
-	}
-	
-	/* 2. Show the mobile version by default */
-	.module-mobile {
-	  display: block;
-		height: 100%;
-	}
-	
-	/* 3. Use a Media Query to swap them at a specific breakpoint (e.g., 768px) */
-	@media (min-width: 768px) {
-	  .module-desktop {
-	    display: block;
-	  }
-	  
-	  .module-mobile {
-	    display: none;
-	  }
-	}
-	</style>
-	<style>
 		.fa, .fas {
 			font-weight: 900;
 		}
@@ -782,22 +759,13 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<h2 class="elementor-heading-title elementor-size-default">מודול 1:  הבאת גור חדש הביתה - כיצד מתנהלים
 </h2>		</div>
 				</div>
-				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp module-mobile" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
-			<div class="elementor-widget-wrap elementor-element-populated">
-								<div class="elementor-element elementor-element-2111a24 elementor-widget elementor-widget-image" data-id="2111a24" data-element_type="widget" data-widget_type="image.default">
-				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="926" height="882" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/57d7a60b36630cbc12af8e990c69d0e9.png" class="attachment-large size-large wp-image-669 lazyloaded" alt="" data-ll-status="loaded">
-																													</div>
-				</div>
-					</div>
-		</div>
 				<div class="elementor-element elementor-element-96eeaa0 elementor-widget elementor-widget-text-editor" data-id="96eeaa0" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 							<p><span style="font-weight: 400;">איך לנהל </span><b>שגרה כמפתח להצלחה</b><span style="font-weight: 400;"> עם הגור. פה יש לך דגשים קטנים וחשובים שיכולים לעשות לכם שינוי עצום בהתנהלות בבית.</span></p><p><span style="font-weight: 400;">בנוסף יש את </span><b>עקרון התכנון המוקדם</b><span style="font-weight: 400;"> – עקרון קסם שיעזור לכם לנבא מתי לגור יש צרכים ולדעת להתנהל איתו בצורה מושלמת.</span></p><p><span style="font-weight: 400;">ועוד…</span></p>						</div>
 				</div>
 					</div>
 		</div>
-		<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp module-desktop" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
+				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-2111a24 elementor-widget elementor-widget-image" data-id="2111a24" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -806,12 +774,11 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				</div>
 					</div>
 		</div>
-				
 							</div>
 		</section>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-fa4cb5e elementor-section-content-middle elementor-reverse-mobile elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="fa4cb5e" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
-					<div id="module-2-desktop" class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-8cc45f8 animated fadeInRight module-desktop" data-id="8cc45f8" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
+					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-8cc45f8 animated fadeInRight" data-id="8cc45f8" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-56881c0 elementor-widget elementor-widget-image" data-id="56881c0" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -830,15 +797,6 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">מודול 2:  שיטות הקסם לגור המושלם</h2>		</div>
 				</div>
-				<div id="module-2-mobile' class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-8cc45f8 animated fadeInRight module-mobile" data-id="8cc45f8" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
-			<div class="elementor-widget-wrap elementor-element-populated">
-								<div class="elementor-element elementor-element-56881c0 elementor-widget elementor-widget-image" data-id="56881c0" data-element_type="widget" data-widget_type="image.default">
-				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="1024" height="975" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/a266ad245b9545efdad1b808e04f54ad.png" class="attachment-large size-large wp-image-670 lazyloaded" alt="" data-ll-status="loaded">
-																													</div>
-				</div>
-					</div>
-		</div>
 				<div class="elementor-element elementor-element-d94c58f elementor-widget elementor-widget-text-editor" data-id="d94c58f" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 							<p><b>תיחום </b><span style="font-weight: 400;">– כל מה שנוגע לתיחום ושימוש בגדר/כלוב.&nbsp;</span></p><p><span style="font-weight: 400;">למה צריך את זה? איך זה מסייע לכם?</span></p><p><span style="font-weight: 400;">ואיך עושים את זה הכי נכון וחכם ככה שהגור יאהב מאוד להיות שם ולא ירגיש חלילה שזה עונש או יבכה שם.</span></p><p><b>שיטות האכלה מתקדמות</b><span style="font-weight: 400;"> – אני מלמדת איך להשתמש במזון ככלי הכי יעיל לחינוך הכלב ולהפוך אותו משד קטן, בכיין ונשכן, לגור רגוע ונעים (קסם של ממש!)</span></p><p><b>&nbsp;טריק סודי</b><span style="font-weight: 400;"> – איך ללמד את הכלב ללכת לישון שינת ישרים, בזמן שאתם יוצאים לעבודה!! (או לכל מקום אחר).&nbsp;</span></p><p><span style="font-weight: 400;">&nbsp;בטוחה שלא שמעתם על זה בשום מקום.. באחריות.</span></p>						</div>
