--- a/main.html
+++ b/main.html
@@ -747,7 +747,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-000df00 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="000df00" data-element_type="section">
-						<div class="elementor-container elementor-column-gap-default">
+						<div class="elementor-container elementor-column-gap-default modules-direction">
 					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-eae537c animated fadeInRight" data-id="eae537c" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-1b2564a elementor-widget elementor-widget-heading" data-id="1b2564a" data-element_type="widget" data-widget_type="heading.default">
@@ -765,7 +765,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				</div>
 					</div>
 		</div>
-				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
+				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp module-desktop" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-2111a24 elementor-widget elementor-widget-image" data-id="2111a24" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -777,7 +777,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 							</div>
 		</section>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-fa4cb5e elementor-section-content-middle elementor-reverse-mobile elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="fa4cb5e" data-element_type="section">
-						<div class="elementor-container elementor-column-gap-default">
+						<div class="elementor-container elementor-column-gap-default modules-direction">
 					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-8cc45f8 animated fadeInRight" data-id="8cc45f8" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-56881c0 elementor-widget elementor-widget-image" data-id="56881c0" data-element_type="widget" data-widget_type="image.default">
@@ -806,7 +806,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 							</div>
 		</section>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-f6f4d67 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="f6f4d67" data-element_type="section">
-						<div class="elementor-container elementor-column-gap-default">
+						<div class="elementor-container elementor-column-gap-default modules-direction">
 					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-f434769 animated fadeInRight" data-id="f434769" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-7a0fd12 elementor-widget elementor-widget-heading" data-id="7a0fd12" data-element_type="widget" data-widget_type="heading.default">
@@ -835,7 +835,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 							</div>
 		</section>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-d5070d3 elementor-section-content-middle elementor-reverse-mobile elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="d5070d3" data-element_type="section">
-						<div class="elementor-container elementor-column-gap-default">
+						<div class="elementor-container elementor-column-gap-default modules-direction">
 					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-a4f43b2 animated fadeInRight" data-id="a4f43b2" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-3ae253c elementor-widget elementor-widget-image" data-id="3ae253c" data-element_type="widget" data-widget_type="image.default">
