--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<style>
-		@media screen and (min-width: 768px) {
+		@media screen and (max-width: 768px) {
 		    .modules-direction {
 		        display: flex;
 		    }
