--- a/main.html
+++ b/main.html
@@ -454,7 +454,11 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.10.0 - 09-01-2023 */
 .elementor-widget-video .elementor-widget-container{overflow:hidden;transform:translateZ(0)}.elementor-widget-video .elementor-open-inline .elementor-custom-embed-image-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:50%}.elementor-widget-video .elementor-custom-embed-image-overlay{cursor:pointer;text-align:center}.elementor-widget-video .elementor-custom-embed-image-overlay:hover .elementor-custom-embed-play i{opacity:1}.elementor-widget-video .elementor-custom-embed-image-overlay img{display:block;width:100%}.elementor-widget-video .e-hosted-video .elementor-video{-o-object-fit:cover;object-fit:cover}.e-con-inner>.elementor-widget-video,.e-con>.elementor-widget-video{width:var(--container-widget-width);--flex-grow:var(--container-widget-flex-grow)}</style>		<div class="elementor-wrapper elementor-fit-aspect-ratio elementor-open-inline">
-			<iframe loading="lazy" class="elementor-video-iframe lazyloaded" allowfullscreen="" title="vimeo נגן וידאו" src="https://vimeo.com/986098386?share=copy&fl=sv&fe=ci&texttrack=false" data-rocket-lazyload="fitvidscompatible" data-ll-status="loaded"></iframe>
+			<!-- <iframe loading="lazy" class="elementor-video-iframe lazyloaded" allowfullscreen="" title="vimeo נגן וידאו" src="https://vimeo.com/986098386?share=copy&fl=sv&fe=ci&texttrack=false" data-rocket-lazyload="fitvidscompatible" data-ll-status="loaded"></iframe> -->
+			 <iframe src="https://player.vimeo.com/video/986098386" 
+            style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+            frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
+    </iframe>
 				</div>
 				</div>
 				</div>
