--- a/main.html
+++ b/main.html
@@ -1249,7 +1249,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 							</div>
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-392c1f4 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="392c1f4" data-element_type="section" data-settings="{&quot;shape_divider_top&quot;:&quot;waves&quot;,&quot;shape_divider_top_negative&quot;:&quot;yes&quot;,&quot;shape_divider_bottom&quot;:&quot;waves&quot;,&quot;shape_divider_bottom_negative&quot;:&quot;yes&quot;}">
-							<div class="elementor-background-overlay"></div>
+							<div class="elementor-background-overlay" style="height: 800px"></div>
 						<div class="elementor-shape elementor-shape-top" data-negative="true">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
 	<path class="elementor-shape-fill" d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3	c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3	c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"></path>
@@ -1260,7 +1260,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 </svg>		</div>
 					<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-6889809" data-id="6889809" data-element_type="column">
-			<div class="elementor-widget-wrap elementor-element-populated">
+			<div class="elementor-widget-wrap elementor-element-populated" style="padding-top: 20px">
 								<div class="elementor-element elementor-element-9e8b7a4 elementor-widget elementor-widget-heading animated fadeInUp" data-id="9e8b7a4" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:100}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">אבל למה אונליין?<br>
