--- a/main.html
+++ b/main.html
@@ -18,6 +18,13 @@
 			.modules-direction:nth-child(odd) {
     			flex-direction: column-reverse;
 			}
+			.youtube-video-section iframe {
+				width: 100%;
+			}
+		}
+
+		.youtube-video-section iframe {
+			width: 600px;
 		}
 		#img-2 {
 			height: 400px;
@@ -1938,7 +1945,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</div>
 							</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-24dccc4 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="24dccc4" data-element_type="section">
+				<section class="youtube-video-section elementor-section elementor-top-section elementor-element elementor-element-24dccc4 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="24dccc4" data-element_type="section">
 						<iframe width="100%" height="315" src="https://www.youtube.com/embed/EwaB6VEFYvI?si=4WDCqN3xZ5BWyLsj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-78ce002 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="78ce002" data-element_type="section">
@@ -1953,7 +1960,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</div>
 							</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-b4a9d77 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="b4a9d77" data-element_type="section">
+				<section class="youtube-video-section elementor-section elementor-top-section elementor-element elementor-element-b4a9d77 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="b4a9d77" data-element_type="section">
 						<iframe width="100%" height="315" src="https://www.youtube.com/embed/cJSOqtbM6qI?si=qAQejb2H6reDnHYY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-051af0e elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="051af0e" data-element_type="section">
@@ -1964,7 +1971,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</div>
 							</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-8ed6fc4 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="8ed6fc4" data-element_type="section">
+				<section class="youtube-video-section elementor-section elementor-top-section elementor-element elementor-element-8ed6fc4 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="8ed6fc4" data-element_type="section">
 						<iframe width="100%" height="315" src="https://www.youtube.com/embed/cipObHwHVR4?si=a8DCpGDXZ1xxHRGx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-1ff6100 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="1ff6100" data-element_type="section">
@@ -1975,7 +1982,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</div>
 							</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-35df34f elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="35df34f" data-element_type="section">
+				<section class="youtube-video-section elementor-section elementor-top-section elementor-element elementor-element-35df34f elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="35df34f" data-element_type="section">
 						<iframe width="100%" height="315" src="https://www.youtube.com/embed/4fTldSHMan0?si=cdbBCLJZLyPX6CsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</section>
 							</div>
