--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
     			flex-direction: column-reverse;
 			}
 			.youtube-video-section iframe {
-				width: 100%;
+				width: 100% !important;
 			}
 		}
 
