--- a/main.html
+++ b/main.html
@@ -1410,7 +1410,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</div>
 							</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-1b784d2 elementor-section-content-top elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="1b784d2" data-element_type="section" id="contact" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;shape_divider_top&quot;:&quot;waves&quot;,&quot;shape_divider_top_negative&quot;:&quot;yes&quot;,&quot;shape_divider_bottom&quot;:&quot;waves&quot;,&quot;shape_divider_bottom_negative&quot;:&quot;yes&quot;}">
+				<section class="elementor-section elementor-top-section elementor-element elementor-element-1b784d2 elementor-section-content-top elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="1b784d2" data-element_type="section" id="contact2" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;shape_divider_top&quot;:&quot;waves&quot;,&quot;shape_divider_top_negative&quot;:&quot;yes&quot;,&quot;shape_divider_bottom&quot;:&quot;waves&quot;,&quot;shape_divider_bottom_negative&quot;:&quot;yes&quot;}">
 					<div class="elementor-shape elementor-shape-top" data-negative="true">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
 	<path class="elementor-shape-fill" d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3	c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3	c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"></path>
@@ -1560,7 +1560,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</div>
 							</div>
 		</section>
-				<section class="elementor-section elementor-top-section elementor-element elementor-element-48cffe8 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default flex-center" data-id="48cffe8" data-element_type="section" id="pay">
+				<section class="elementor-section elementor-top-section elementor-element elementor-element-48cffe8 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default flex-center" data-id="48cffe8" data-element_type="section" id="contact">
 						<div class="elementor-container elementor-column-gap-default flex-center-child">
 					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-21b924f" style="width: 100%" data-id="21b924f" data-element_type="column">
 			<script type='text/javascript' src='//form2.ravpage.co.il/461c574c4d8ec2724f009ee25dbe020c6966A6C2' charset='UTF-8'></script>
