--- a/main.html
+++ b/main.html
@@ -27,9 +27,10 @@
 			width: 600px;
 		}
 		#img-2 {
-			height: 400px;
-    		width: 400px;
-			clip-path: circle(50%);
+			width: 400px;
+		    height: 400px;
+		    border-radius: 50%;
+		    object-fit: cover;
 		}
 		#img-2-container {
 			align-items: center;
