--- a/main.html
+++ b/main.html
@@ -1590,7 +1590,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-1758717 elementor-align-center elementor-widget elementor-widget-button" data-id="1758717" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://secure.cardcom.solutions/EA/EA5/sPF9QSRrEmZxNNQjHs1Jg/Intro" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="#contact" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">שווה ממש. תני לי גישה לתוכנית!</span>
 		</span>
@@ -1661,7 +1661,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-854d2c6 elementor-align-center elementor-widget elementor-widget-button" data-id="854d2c6" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://secure.cardcom.solutions/EA/EA5/sPF9QSRrEmZxNNQjHs1Jg/Intro" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="#contact" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">מושלם! אני אשמח</span>
 		</span>
@@ -1712,7 +1712,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-64a100e elementor-align-center elementor-widget elementor-widget-button animated fadeInUp" data-id="64a100e" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:300}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://secure.cardcom.solutions/EA/EA5/sPF9QSRrEmZxNNQjHs1Jg/Intro" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="#contact" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">כן יפית, תני לי גישה לתוכנית!</span>
 		</span>
