--- a/main.html
+++ b/main.html
@@ -1,5 +1,27 @@
 <html dir="rtl" lang="he-IL" class="js no-touch localstorage no-webp no-webp-in-css svg inlinesvg"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<head><meta http-equiv="origin-trial" content="A7vZI3v+Gz7JfuRolKNM4Aff6zaGuT7X0mf3wtoZTnKv6497cVMnhy03KDqX7kBz/q/iidW7srW31oQbBt4VhgoAAACUeyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGUuY29tOjQ0MyIsImZlYXR1cmUiOiJEaXNhYmxlVGhpcmRQYXJ0eVN0b3JhZ2VQYXJ0aXRpb25pbmczIiwiZXhwaXJ5IjoxNzU3OTgwODAwLCJpc1N1YmRvbWFpbiI6dHJ1ZSwiaXNUaGlyZFBhcnR5Ijp0cnVlfQ=="><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link rel="dns-prefetch" href="https://fonts.gstatic.com">
+<head>
+	<style>
+:root {
+    --e-global-color-primary: #3B44D5;
+            --e-global-color-secondary: #54595F;
+            --e-global-color-text: #7A7A7A;
+            --e-global-color-accent: #3B44D5;
+            --e-global-color-c26bf14: #3B44D5;
+            --e-global-color-9a3ff4b: #0055ab;
+            --e-global-color-7e7a7ad: #fb82b7;
+            --e-global-color-c9f25e4: #13D8DF;
+            --e-global-color-a13120f: #13B9DF;
+            --e-global-typography-primary-font-family: "DM Sans";
+            --e-global-typography-primary-font-weight: 600;
+            --e-global-typography-secondary-font-family: "DM Sans";
+            --e-global-typography-secondary-font-weight: 400;
+            --e-global-typography-text-font-family: "DM Sans";
+            --e-global-typography-text-font-weight: 400;
+            --e-global-typography-accent-font-family: "DM Sans";
+            --e-global-typography-accent-font-weight: 500;
+}
+</style>
+	<meta http-equiv="origin-trial" content="A7vZI3v+Gz7JfuRolKNM4Aff6zaGuT7X0mf3wtoZTnKv6497cVMnhy03KDqX7kBz/q/iidW7srW31oQbBt4VhgoAAACUeyJvcmlnaW4iOiJodHRwczovL3d3dy5nb29nbGUuY29tOjQ0MyIsImZlYXR1cmUiOiJEaXNhYmxlVGhpcmRQYXJ0eVN0b3JhZ2VQYXJ0aXRpb25pbmczIiwiZXhwaXJ5IjoxNzU3OTgwODAwLCJpc1N1YmRvbWFpbiI6dHJ1ZSwiaXNUaGlyZFBhcnR5Ijp0cnVlfQ=="><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""><link rel="dns-prefetch" href="https://fonts.gstatic.com">
 	<meta charset="UTF-8">
 			<title>גור מחונך ב4 שבועות – דוגסמייל</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
