--- a/main.html
+++ b/main.html
@@ -43,6 +43,9 @@
 			.youtube-video-section iframe {
 				width: 100% !important;
 			}
+			#img-2 {
+		      height: 353px;
+			}
 		}
 
 		.youtube-video-section iframe {
@@ -50,7 +53,7 @@
 		}
 		#img-2 {
 			width: 400px;
-		    height: 353px;
+		    height: 400px;
 		    border-radius: 50%;
 		    object-fit: cover;
 		}
