--- a/main.html
+++ b/main.html
@@ -743,7 +743,7 @@
 				</div>
 				<div class="elementor-element elementor-element-c4848e5 elementor-widget elementor-widget-text-editor animated fadeInUp" data-id="c4848e5" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:150}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p><span style="font-weight: 400;"><strong>אני יודעת שזה הולך לעלות לי ביוקר</strong> ואולי אותם מאלפי כלבים יכעסו עלי אבל אני מוכנה לספוג את זה,<br>&nbsp;כי אני רוצה שכל אחד יוכל לדעת איך לאלף את הגור שלו ולהפוך אותו לכלב מחונך שכיף לגדל.</span></p><p><span style="font-weight: 400;">מה שעשיתי זה שבעצם לקחתי את כל הידע, הקורסים, ההכשרות והניסיון הרב שצברתי במשך <span id="years-experience">5</span>השנים האחרונות ,<br>&nbsp;וזיקקתי הכל לתוך&nbsp;</span><span style="font-weight: 400;"><u>תכנית הכשרה אינטרנטית</u> ככה שכל אחד </span><span style="font-weight: 400;">יוכל ללמוד בעצמו, ובזמן שלו, איך לעשות את זה.</span></p><p><span style="font-weight: 400;">קראתי לזה…&nbsp;</span></p>						</div>
+							<p><span style="font-weight: 400;"><strong>אני יודעת שזה הולך לעלות לי ביוקר</strong> ואולי אותם מאלפי כלבים יכעסו עלי אבל אני מוכנה לספוג את זה,<br>&nbsp;כי אני רוצה שכל אחד יוכל לדעת איך לאלף את הגור שלו ולהפוך אותו לכלב מחונך שכיף לגדל.</span></p><p><span style="font-weight: 400;">מה שעשיתי זה שבעצם לקחתי את כל הידע, הקורסים, ההכשרות והניסיון הרב שצברתי במשך <span id="years-experience"> </span>השנים האחרונות,<br>&nbsp;וזיקקתי הכל לתוך&nbsp;</span><span style="font-weight: 400;"><u>תכנית הכשרה אינטרנטית</u> ככה שכל אחד </span><span style="font-weight: 400;">יוכל ללמוד בעצמו, ובזמן שלו, איך לעשות את זה.</span></p><p><span style="font-weight: 400;">קראתי לזה…&nbsp;</span></p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-ab90bca elementor-headline--style-highlight elementor-widget elementor-widget-animated-headline animated fadeInUp" data-id="ab90bca" data-element_type="widget" data-settings="{&quot;marker&quot;:&quot;double_underline&quot;,&quot;highlighted_text&quot;:&quot;\&quot;\u05d2\u05d5\u05e8 \u05de\u05d7\u05d5\u05e0\u05da \u05d14 \u05e9\u05d1\u05d5\u05e2\u05d5\u05ea\&quot;&quot;,&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:200,&quot;headline_style&quot;:&quot;highlight&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;highlight_animation_duration&quot;:1200,&quot;highlight_iteration_delay&quot;:8000}" data-widget_type="animated-headline.default">
 				<div class="elementor-widget-container">
@@ -1963,7 +1963,7 @@
 function loadScripts(){document.querySelectorAll("script[data-type='lazy']").forEach(function(elem){elem.setAttribute("src",elem.getAttribute("data-src"))})}</script>
     
 		<script>
-			document.getElementById('years-experience').innerText = new Date().getFullYear() - 2019;
+			document.getElementById('years-experience').innerText = new Date().getFullYear() - 2019 + " ";
 		</script>
 
 </body>
