--- a/main.html
+++ b/main.html
@@ -1512,7 +1512,7 @@
         
         <div class="elementor-container elementor-column-gap-default flex-center-child" style="width: 100%">
 					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-21b924f" style="width: 100%; justify-content: center;" data-id="21b924f" data-element_type="column">
-			<script type='text/javascript' src='//form2.ravpage.co.il/461c574c4d8ec2724f009ee25dbe020c6966A6C2' defer charset='UTF-8'></script>
+			<script type='text/javascript' src='//form2.ravpage.co.il/461c574c4d8ec2724f009ee25dbe020c6966A6C2' charset='UTF-8'></script>
 					</div>
 		</div>
 				
